[package]
name = "ull-sht3x"
version = "0.1.0"
edition.workspace = true
description = "no_std embedded-hal 1.0 I2C driver for Sensirion SHT3x-DIS humidity and temperature sensors"
license.workspace = true
repository.workspace = true
keywords = ["sht3x", "sht30", "sht31", "sht35", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[lints]
workspace = true

[dependencies]
defmt = { version = "1.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[features]
default = []
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
serde = ["dep:serde"]
